added media queries for responsive design

--- a/single-price-grid-component-master/index.html
+++ b/single-price-grid-component-master/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <!-- google font  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Single Price Grid Component</title>
 </head>
 <body>
@@ -18,10 +22,11 @@
     <div id="bottom-section">
       <div id="bottom-left-section">
         <h4> Monthly Subscription</h4>
-    
-        <div id="pricing">$29</div>
-        <div id="pricing-frequency">per month</div>
-        <h4>Full access for less than $1 a day</h4>
+        <div id="pricing-section">
+          <div id="pricing">$29</div>
+          <div id="pricing-frequency">per month</div>
+          <h4>Full access for less than $1 a day</h4>
+        </div>
         <button>Sign Up</button>
         </div><div id="bottom-right-section">
           <h4>Why Us</h4>
